# trading-bot

./: .cursorignore  .dockerignore  .env.example  .env.openclaw.example  .env.runtime.override  .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.hub  Makefile  README.md  bot.py  docker-compose.openclaw.dev.yml  docker-compose.single.yml  docker-compose.yml  hub_main.py  pyproject.toml  requirements.txt  run_analytics.py  run_monitor.py
.cursor/: audit_db_intel_scripts.md
analytics/: engine.py
config/: bot_profiles.py  settings.py
core/: market_schedule.py
custom_strategies/: _example.py
db/: __init__.py  errors.py  hub_repository.py  hub_store.py  hub_store_postgres.py  local_db.py  models.py  pg_compat.py  store.py
docs/: AI_CONTEXT.md  ANALYSIS_REPORT.md  ARCHITECTURE.md  AUDIT_ORDERS_STRATEGIES.md  DEPLOY_INSTRUCTIONS.md  DO_DEPLOYMENT_TRACKER.md  EXECUTION_PLAN.md  current_issues.md  new_ideas.md  open_claw_integration_playbook.md  openclaw_operator_guide.md  refactoring_plan.md  strategy_analysis_2026-03-03.md  summary.html  test_report.html  token_consumption_estimate_24h.md
env/: local.compose.env  local.runtime.env  prod.compose.env.example  prod.runtime.env.example
grafana/: Dockerfile
hub/: candle_fetcher.py  state.py
intel/: __init__.py  coingecko.py  coinmarketcap.py  defillama.py  fear_greed.py  glassnode.py  liquidations.py  macro_calendar.py  market_intel.py  openclaw.py  santiment.py  tradingview.py  whale_sentiment.py
loki/: Dockerfile.loki  Dockerfile.promtail  loki-config.yml  promtail-config.yml
news/: __init__.py  monitor.py
notifications/: __init__.py  notifier.py
prometheus/: prometheus.yml
releases/: README.md  v1.0.0.md
scanner/: __init__.py  binance_futures.py  trending.py
scripts/: backup_dbs.sh  backup_hub_postgres.sh  bootstrap_ai_memory.sh  build-dashboard.sh  check_example_env_secrets.py  coverage_guard.py  cutover_hub_to_postgres.sh  db_sync.py  deploy-digitalocean.sh  docker-entrypoint-with-baked-secrets.sh  install-hooks.sh  install_postgres_backup_launchd.sh  materialize_runtime_secrets.sh  migrate_hub_postgres_schema.sh  migrate_hubdb_to_postgres.py  nice_oc_logs  night_monitor.py  night_watch.sh  openclaw_intel_bridge.py  openclaw_logs_overview.py  openclaw_preflight.sh  preflight_check.py  recover_hub_db.sh  recover_hub_postgres.sh  restore_hub_postgres.sh  run-local.sh  run_session.sh  validate_openclaw_endpoint.py  validate_openclaw_hub_integration.py
services/: analytics_service.py  monitor.py  openclaw_advisor_service.py  signal_generator.py
shared/: __init__.py  models.py  runtime_tuning.py  state.py
strategies/: __init__.py  base.py  bollinger.py  compound_momentum.py  custom_loader.py  grid.py  macd.py  market_open_volatility.py  mean_reversion.py  rsi.py  swing_opportunity.py
tests/: conftest.py  test_analytics.py  test_binance_futures_scanner.py  test_bootstrap_ai_memory.py  test_bot.py  test_candle_fetcher.py  test_command_server.py  test_config.py  test_coverage_boost.py  test_coverage_guard.py  test_daily_target.py  test_db.py  test_error_mapper.py  test_example_env_secret_check.py  test_exchange.py  test_exchanges.py  test_extreme_watcher.py  test_hedge.py  test_hub_main_daily_report.py  test_hub_state.py  test_integration_binance.py  test_intel.py  test_intel_modules.py  test_market_filter.py  test_market_schedule.py  test_materialize_runtime_secrets.py  test_news.py  (+25 more)
(+104 files in other folders)
