[project]
name = "trading-bot"
version = "0.5.0"
description = "Modular crypto trading bot with volatility exploitation"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (unused imports, undefined names)
    "I",     # isort (import ordering)
    "B",     # bugbear (common Python gotchas)
    "UP",    # pyupgrade (modern Python syntax)
    "SIM",   # simplify (unnecessary complexity)
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in default arg (needed for FastAPI Depends)
    "RUF012", # mutable class var without ClassVar (pydantic models)
    "UP042", # str+Enum → StrEnum breaks pydantic serialization
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM117", "E731", "RUF006"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=. --cov-report=term-missing --cov-report=html:htmlcov --cov-config=pyproject.toml -m 'not integration'"
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real exchange APIs (Binance testnet) — skipped by default",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
    "web/frontend/*",
    "scripts/*",
    "htmlcov/*",
    "docs/*",
    "chat-history/*",
    "custom_strategies/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "\\.\\.\\.",
    "pass",
    "raise NotImplementedError",
    "@abstractmethod",
]
